probe activate/deactivate gcode, locking

--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -8,8 +8,10 @@ gcode:
   M140 S{BED_TEMP}
   # use absolute coordinates
   G90
+  # keep probe attached
+  LOCK_PROBE
   # home printer
-  G28 KEEP_PROBE
+  G28
   # move the nozzle off the bed to heat the bed
   CENTER Z=50
   # wait for bed to reach temperature
@@ -17,7 +19,7 @@ gcode:
   # probe bed
   BED_MESH_CALIBRATE
   # stash probe
-  DOCK_PROBE
+  DOCK_PROBE UNLOCK=1
   # move the nozzle off the bed to heat nozzle
   G1 Z10 X-10 Y-10 F6000
   # heat nozzle
