--- a/klipper-switchwire/probe.cfg
+++ b/klipper-switchwire/probe.cfg
@@ -17,6 +17,9 @@ pin: sb:ENDSTOP0
 x_offset: -1.0
 y_offset: 23.0
 z_offset: 6.494
+deactivate_on_each_sample: False
+activate_gcode: attach_probe back=1
+deactivate_gcode: dock_probe back=1
 
 [servo probe_dock]
 pin: SERVO
@@ -53,6 +56,7 @@ initial_duration: 1
 gcode:
     retract_probe_dock
     query_probe_attached
+    set_gcode_variable macro=dock_probe variable=locked value=0
 
 [gcode_macro query_probe_attached]
 variable_attached: 0
@@ -112,10 +116,22 @@ gcode:
     set_servo servo=probe_dock width=0
     M400
 
+[gcode_macro lock_probe]
+description: lock attached Z probe
+gcode:
+    {% set locked = printer['gcode_macro dock_probe'].locked %}
+    set_gcode_variable macro=dock_probe variable=locked value={[0, locked + 1]|max}
+
+[gcode_macro unlock_probe]
+description: unlock attached Z probe
+gcode:
+    {% set locked = printer['gcode_macro dock_probe'].locked %}
+    set_gcode_variable macro=dock_probe variable=locked value={[0, locked - 1]|max}
+
 [gcode_macro undock_probe]
 description: attaches Z probe
 gcode:
-    attach_probe back={params.BACK|default(0)}
+    attach_probe back={params.BACK|default(0)} lock={params.LOCK|default(0)}
 
 [gcode_macro attach_probe]
 description: attaches Z probe
@@ -154,11 +170,18 @@ gcode:
         M400
         set_velocity_limit accel={printer.configfile.settings.printer.max_accel}
         restore_gcode_state name=attach_probe move={params.BACK|default(0)} move_speed={speed}
+
+        query_probe_attached attached=1
     {% endif %}
-    query_probe_attached attached=1
+
+    # lock if requested
+    {% if params.LOCK|default(0)|int != 0 %}
+       lock_probe
+    {% endif %}
 
 [gcode_macro dock_probe]
 description: docks Z probe
+variable_locked: 0
 gcode:
     {% set speed = printer['gcode_macro _probe_settings'].speed * 60 %}
     {% set accel = printer['gcode_macro _probe_settings'].accel %}
@@ -168,7 +191,7 @@ gcode:
     {% set dock_shear_x = printer['gcode_macro _probe_settings'].dock_shear_x %}
     {% set z_hop = printer['gcode_macro _probe_settings'].z_hop %}
 
-    {% if printer['gcode_macro query_probe_attached'].attached %}
+    {% if printer['gcode_macro query_probe_attached'].attached and locked - (params.UNLOCK|default(0)|int != 0) <= 0 %}
         # check prerequisites
         {% if not 'x' in printer.toolhead.homed_axes %}
            { action_raise_error('Must home X axis first!') }
@@ -201,8 +224,14 @@ gcode:
         M400
         set_velocity_limit accel={printer.configfile.settings.printer.max_accel}
         restore_gcode_state name=dock_probe move={params.BACK|default(0)} move_speed={speed}
+
+        query_probe_attached attached=0
     {% endif %}
-    query_probe_attached attached=0
+
+    # unlock if requested
+    {% if params.UNLOCK|default(0)|int != 0 %}
+        unlock_probe
+    {% endif %}
 
 [homing_override]
 axes: xyz
@@ -254,7 +283,7 @@ gcode:
         {% endif %}
 
         # attach the probe
-        attach_probe
+        attach_probe lock=1
         set_leds state=probing push=1
 
         # move to the center
@@ -270,8 +299,10 @@ gcode:
 
         # dock probe
         set_leds pop=1
-        {% if not 'KEEP_PROBE' in params %}
-          dock_probe back=1
+        {% if 'KEEP_PROBE' in params %}
+           unlock_probe
+        {% else %}
+           dock_probe unlock=1
         {% endif %}
 
         # epilogue
