--- a/klipper-switchwire/macros/heat-soak.cfg
+++ b/klipper-switchwire/macros/heat-soak.cfg
@@ -27,7 +27,7 @@ gcode:
   M106 S255
   # put the nozzle in a good place to measure ambient temp
   G28
-  CENTER Z=50
+  PARK_CENTER Z=50
   # turn off steppers
   M84
   # play a jolly start tone
