--- a/klipper-switchwire/macros/movement.cfg
+++ b/klipper-switchwire/macros/movement.cfg
@@ -1,11 +1,44 @@
-[gcode_macro CENTER]
+[gcode_macro PARK_CENTER]
 gcode:
-  {% set x = params.X|default(110)|float %}
-  {% set y = params.Y|default(110)|float %}
+  {% set x = params.X|default((printer.toolhead.axis_maximum.x - printer.toolhead.axis_minimum.x)/2)|float %}
+  {% set y = params.X|default((printer.toolhead.axis_maximum.y - printer.toolhead.axis_minimum.y)/2)|float %}
   {% set f = params.F|default(6000)|float %}
+  save_gcode_state name=park_center
+  G90
   {% if params.Z is defined %}
      {% set z = params.Z|float %}
-     G1 X{x} Y{y} Z{z} F{f}
+     G0 X{x} Y{y} Z{z} F{f}
   {% else %}
-    G1 X{x} Y{y} F{f}
+     G0 X{x} Y{y} F{f}
   {% endif %}
+  restore_gcode_state name=park_center
+
+[gcode_macro PARK_FRONT]
+gcode:
+  {% set x = params.X|default((printer.toolhead.axis_maximum.x - printer.toolhead.axis_minimum.x)/2)|float %}
+  {% set y = params.X|default(printer.toolhead.axis_minimum.y + 5)|float %}
+  {% set f = params.F|default(6000)|float %}
+  save_gcode_state name=park_front
+  G90
+  {% if params.Z is defined %}
+     {% set z = params.Z|float %}
+     G0 X{x} Y{y} Z{z} F{f}
+  {% else %}
+     G0 X{x} Y{y} F{f}
+  {% endif %}
+  restore_gcode_state name=park_front
+
+[gcode_macro PARK_REAR]
+gcode:
+  {% set x = params.X|default((printer.toolhead.axis_maximum.x - printer.toolhead.axis_minimum.x)/2)|float %}
+  {% set y = params.X|default(printer.toolhead.axis_maximum.y - 5)|float %}
+  {% set f = params.F|default(6000)|float %}
+  save_gcode_state name=park_rear
+  G90
+  {% if params.Z is defined %}
+     {% set z = params.Z|float %}
+     G0 X{x} Y{y} Z{z} F{f}
+  {% else %}
+     G0 X{x} Y{y} F{f}
+  {% endif %}
+  restore_gcode_state name=park_rear
