--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -13,7 +13,7 @@ gcode:
   # home printer
   G28
   # move the nozzle off the bed to heat the bed
-  CENTER Z=50
+  PARK_CENTER Z=50
   # wait for bed to reach temperature
   M190 S{BED_TEMP}
   # probe bed
@@ -51,7 +51,7 @@ gcode:
   M104 S0
   M106 S0
   # push bed forward and center toolhead
-  CENTER Y={printer.toolhead.axis_maximum.y}
+  PARK_REAR
   # disable steppers
   M84
   # play a jolly end tone
