pause and resume macros

--- a/klipper-switchwire/macros/leds.cfg
+++ b/klipper-switchwire/macros/leds.cfg
@@ -10,6 +10,7 @@ variable_colors: {
       'probing': [0.0, 0.6, 0.2, 0.0],
       'meshing': [0.2, 1.0, 0.0, 0.0],
       'printing': [1.0, 0.0, 0.0, 0.0],
+      'paused': [0.0, 0.0, 1.0, 0.0],
     },
     'nozzle': {
       'off': [0.0, 0.0, 0.0, 0.0],
