--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -41,17 +41,20 @@ gcode:
 
 [gcode_macro PRINT_END]
 gcode:
-  # move nozzle away from print and retract enough to remove filament
-  G91
-  G1 E-8 F2400
-  G90
-  G1 Z{[printer.toolhead.position.z + 15, printer.toolhead.axis_maximum.z]|min} F3000
+  {% if 'xyz' in printer.toolhead.homed_axes %}
+    # move nozzle away from print and retract enough to remove filament
+    G91
+    G1 E-8 F2400
+    G90
+    G1 Z{[printer.toolhead.position.z + 15, printer.toolhead.axis_maximum.z]|min} F3000
+    # push bed forward and center toolhead
+    PARK_REAR
+  {% endif %}
   # turn off bed, extruder, fans
   M140 S0
   M104 S0
   M106 S0
-  # push bed forward and center toolhead
-  PARK_REAR
+  TURN_OFF_HEATERS
   # disable steppers
   M84
   # play a jolly end tone
