new build volume measurements

--- a/klipper-switchwire/movement.cfg
+++ b/klipper-switchwire/movement.cfg
@@ -5,6 +5,9 @@ max_accel: 2000
 max_z_velocity: 50
 max_z_accel: 1000
 
+# build volume is 250mm x 235mm x 235mm
+# Z axis can probably reach 250mm, but I leave 15mm for z-hop on homing
+
 [stepper_x]
 # port labeled X on my control board is acting funky
 # (spontaneous resets) so use E1 instead.
@@ -19,9 +22,9 @@ enable_pin: !E1EN
 microsteps: 64
 rotation_distance: 40
 endstop_pin: sb:ENDSTOP1
-position_endstop: 233
-position_min: -17
-position_max: 233
+position_endstop: 250
+position_min: 0
+position_max: 250
 homing_speed: 50
 
 [tmc2208 stepper_x]
@@ -37,9 +40,9 @@ enable_pin: !YEN
 microsteps: 64
 rotation_distance: 40
 endstop_pin: YP
-position_endstop: 227
-position_min: -23
-position_max: 227
+position_endstop: 240
+position_min: -10
+position_max: 240
 homing_speed: 50
 
 [tmc2208 stepper_y]
@@ -55,7 +58,7 @@ microsteps: 64
 rotation_distance: 40
 endstop_pin: probe:z_virtual_endstop
 position_min: -5
-position_max: 220
+position_max: 235
 homing_speed: 30
 second_homing_speed: 10
 
