--- a/klipper-switchwire/probe.cfg
+++ b/klipper-switchwire/probe.cfg
@@ -4,7 +4,7 @@ gcode:
 variable_speed:        200   # how fast to move to dock area
 variable_accel:        1000  # acceleration to use
 variable_shear_speed:  100   # how fast to shear off magnets
-variable_dock_x:       190   # location of dock on X
+variable_dock_x:       207   # location of dock on X
 variable_dock_deploy:  40    # angle of servo to deploy dock
 variable_dock_retract: 110   # angle of servo to retract dock
 variable_dock_delay:   250   # ms to keep servo on
@@ -30,9 +30,9 @@ maximum_pulse_width: 0.0024
 [bed_mesh]
 speed: 200
 horizontal_move_z: 8.5
-# avoid recesses in screw corners
-mesh_min: 10, 20
-mesh_max: 210, 200
+# usable bed is 250mm x 235mm, inset 15mm to account for probe offset
+mesh_min: 15, 15
+mesh_max: 235, 220
 # odd number on Y ensures we end near dock
 probe_count: 5, 5
 algorithm: bicubic
