add screw definitions for bed

--- a/klipper-switchwire/probe.cfg
+++ b/klipper-switchwire/probe.cfg
@@ -39,6 +39,31 @@ algorithm: bicubic
 fade_start: 1
 fade_end: 10
 
+[screws_tilt_adjust]
+horizontal_move_z: 10
+speed: 50
+screw_thread: CCW-M3
+# positions are nozzle positions such that probe is above screw
+# screw1 is used as base, others are in probe order
+screw1: 126, 99
+screw1_name: center
+screw2: 126, 205
+screw2_name: back middle
+screw3: 16, 205
+screw3_name: back left
+screw4: 16, 99
+screw4_name: middle left
+screw5: 16, -5
+screw5_name: front left
+screw6: 126, -5
+screw6_name: front middle
+screw7: 231, -5
+screw7_name: front right
+screw8: 231, 99
+screw8_name: middle right
+screw9: 231, 205
+screw9_name: back right
+
 #
 # The following macros handle probe docking, undocking, and homing.
 # They are adapted from the Klicky macros, but simplified.
