add seam gap distance to common filament

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -76,6 +76,7 @@ filament_travel_lift_before_obstacle = nil
 filament_travel_max_lift = nil
 filament_travel_ramping_lift = nil
 filament_travel_slope = nil
+filament_seam_gap_distance = nil
 filament_settings_id = ""
 filament_wipe = nil
 
