--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -18,6 +18,7 @@ gcode:
   M190 S{BED_TEMP}
   # probe bed
   BED_MESH_CALIBRATE
+  BED_MESH_OUTPUT
   # stash probe
   DOCK_PROBE UNLOCK=1
   # move the nozzle off the bed to heat nozzle
