--- a/switchwire.ini
+++ b/switchwire.ini
@@ -1,32 +1,41 @@
 [print:*switchwire-common*]
+bridge_acceleration = 3000
 bridge_speed = 140
 compatible_printers = "Switchwire (0.4mm nozzle, red)"
 compatible_printers_condition = printer_model=~/Switchwire/
+default_acceleration = 3500
+external_perimeter_acceleration = 750
 external_perimeter_extrusion_width = 0.4
 external_perimeter_speed = 80
 extrusion_width = 0.4
 fill_pattern = cubic
+first_layer_acceleration = 1000
 first_layer_extrusion_width = 0.4
 first_layer_height = 0.2
 gap_fill_speed = 30
+infill_acceleration = 3500
 infill_extrusion_width = 0.4
 infill_speed = 300
 inherits = 
 layer_height = 0.2
 max_print_speed = 300
 max_volumetric_speed = 11
+perimeter_acceleration = 1000
 perimeter_extrusion_width = 0.4
 perimeter_speed = 150
 perimeters = 2
 print_settings_id = 
 skirts = 2
 small_perimeter_speed = 30
+solid_infill_acceleration = 3000
 solid_infill_extrusion_width = 0.4
 solid_infill_speed = 200
 support_material_extrusion_width = 0.35
 support_material_speed = 120
 top_infill_extrusion_width = 0.4
+top_solid_infill_acceleration = 1000
 top_solid_infill_speed = 60
+travel_acceleration = 3500
 travel_speed = 450
 
 [print:0.2mm]
