back off heating gain for bed

--- a/klipper-switchwire/heat.cfg
+++ b/klipper-switchwire/heat.cfg
@@ -57,3 +57,7 @@ control: pid
 pid_kp: 52.621
 pid_ki: 0.623
 pid_kd: 1110.951
+
+[verify_heater heater_bed]
+# default 2.0, we barely don't make this
+heating_gain: 1.5
