loosen watchdog timer to allow bed heating

--- a/klipper-switchwire/printer.cfg
+++ b/klipper-switchwire/printer.cfg
@@ -22,6 +22,8 @@ canbus_uuid: d271aa8d05c3
 # some miscellaneous stuff that doesn't fit elsewhere
 
 [idle_timeout]
+# bed takes just over 10 minutes to heat to 100C
+timeout: 1200
 gcode:
   turn_off_heaters
   M84
