--- a/switchwire.ini
+++ b/switchwire.ini
@@ -1,42 +1,36 @@
 [print:*switchwire-common*]
-bridge_acceleration = 3000
-bridge_speed = 140
+bridge_speed = 80
 compatible_printers = "Switchwire (0.4mm nozzle, red)"
 compatible_printers_condition = printer_model=~/Switchwire/
-default_acceleration = 3500
-external_perimeter_acceleration = 750
+draft_shield = enabled
 external_perimeter_extrusion_width = 0.4
 external_perimeter_speed = 40
 extrusion_width = 0.4
 fill_pattern = cubic
-first_layer_acceleration = 1000
 first_layer_extrusion_width = 0.4
 first_layer_height = 0.2
-gap_fill_speed = 30
-infill_acceleration = 3500
+first_layer_speed = 25
+gap_fill_speed = 40
 infill_extrusion_width = 0.4
-infill_speed = 300
 inherits = 
+ironing_speed = 30
 layer_height = 0.2
 max_print_speed = 300
-max_volumetric_speed = 11
-perimeter_acceleration = 1000
+max_volumetric_speed = 10
 perimeter_extrusion_width = 0.4
 perimeter_speed = 80
 perimeters = 2
 print_settings_id = 
 skirts = 2
-small_perimeter_speed = 30
-solid_infill_acceleration = 3000
+small_perimeter_speed = 40
 solid_infill_extrusion_width = 0.4
-solid_infill_speed = 200
+solid_infill_speed = 80
 support_material_extrusion_width = 0.35
-support_material_speed = 120
+support_material_speed = 80
 top_infill_extrusion_width = 0.4
-top_solid_infill_acceleration = 1000
-top_solid_infill_speed = 60
-travel_acceleration = 3500
-travel_speed = 450
+top_solid_infill_speed = 40
+travel_speed = 300
+travel_speed_z = 50
 
 [print:0.2mm]
 inherits = *switchwire-common*
@@ -147,14 +141,11 @@ end_gcode = END_PRINT\n
 gcode_flavor = marlin2
 host_type = octoprint
 inherits = 
-machine_max_acceleration_extruding = 6000,1250
-machine_max_acceleration_retracting = 6000,1250
-machine_max_acceleration_travel = 6000,1250
-machine_max_acceleration_x = 6000,1000
-machine_max_acceleration_y = 6000,1000
+machine_max_acceleration_x = 2000,1000
+machine_max_acceleration_y = 2000,1000
 machine_max_acceleration_z = 1000,200
-machine_max_feedrate_x = 680,200
-machine_max_feedrate_y = 680,200
+machine_max_feedrate_x = 300,200
+machine_max_feedrate_y = 300,200
 machine_max_feedrate_z = 50,12
 max_print_height = 235
 print_host = 
