modify start macro to handle nozzle diameter and layer height

--- a/klipper-switchwire/macros/start-end.cfg
+++ b/klipper-switchwire/macros/start-end.cfg
@@ -1,7 +1,18 @@
 [gcode_macro PRINT_START]
 gcode:
+  {% set extruder = printer.configfile.settings[printer.toolhead.extruder] %}
   {% set BED_TEMP = params.BED_TEMP|default(60)|float %}
   {% set EXTRUDER_TEMP = params.EXTRUDER_TEMP|default(190)|float %}
+  {% set NOZZLE_DIAMETER = params.NOZZLE_DIAMETER|default(extruder.nozzle_diameter)|float %}
+  {% set FIRST_LAYER_HEIGHT = params.FIRST_LAYER_HEIGHT|default(0.2)|float %}
+  {% set FILAMENT_DIAMETER = params.FILAMENT_DIAMETER|default(extruder.filament_diameter)|float %}
+
+  {% macro purge_E(dist, flow=1.0) -%}
+    {%- set PI = 3.1416 -%}
+    {%- set V = FIRST_LAYER_HEIGHT * dist * NOZZLE_DIAMETER -%}
+    {%- set E = 4 * V / (PI * FILAMENT_DIAMETER * FILAMENT_DIAMETER) -%}
+    { E * flow }
+  {%- endmacro %}
 
   # start heating bed
   SET_LEDS STATE=heating
@@ -30,14 +41,15 @@ gcode:
   JINGLE_START
 
   # FIXME purge line better, this is just copy/paste prusa
-  G1 Z0.2 X10 Y-5 F6000
+  G1 Z{FIRST_LAYER_HEIGHT} X10 Y-5 F6000
   # unretract
   G92 E0
   G1 E8 F1000
   # purge
   G92 E0
-  G1 Y60 E9 F1000
-  G1 Y100 E12.5 F1000
+  G1 Y60 E{ purge_E(65, flow=4) } F1000
+  G92 E0
+  G1 Y100 E{ purge_E(40, flow=2.5) } F1000
   G92 E0
 
 [gcode_macro PRINT_END]
