add printer profiles for revo nozzles

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -161,7 +161,20 @@ retract_length = 0.5
 retract_lift = 0.2
 retract_speed = 35
 silent_mode = 0
-start_gcode = M109 S0\nM190 S0\nSTART_PRINT EXTRUDER_TEMP={first_layer_temperature[initial_extruder]} BED_TEMP={first_layer_bed_temperature[initial_extruder]}\n
+start_gcode = M109 S0\nM190 S0\nSTART_PRINT EXTRUDER_TEMP={first_layer_temperature[initial_extruder]} BED_TEMP={first_layer_bed_temperature[initial_extruder]} NOZZLE_DIAMETER={nozzle_diameter[initial_extruder]} FIRST_LAYER_HEIGHT={first_layer_height}\n
+
+[printer:Switchwire (0.25mm nozzle, yellow)]
+inherits = *switchwire-common*
+nozzle_diameter = 0.25
 
 [printer:Switchwire (0.4mm nozzle, red)]
 inherits = *switchwire-common*
+nozzle_diameter = 0.4
+
+[printer:Switchwire (0.6mm nozzle, blue)]
+inherits = *switchwire-common*
+nozzle_diameter = 0.6
+
+[printer:Switchwire (0.8mm nozzle, green)]
+inherits = *switchwire-common*
+nozzle_diameter = 0.8
