add layer height print profiles

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -1,51 +1,75 @@
 [print:*switchwire-common*]
 bridge_speed = 80
-compatible_printers = "Switchwire (0.4mm nozzle, red)"
 compatible_printers_condition = printer_model=~/Switchwire/
 draft_shield = enabled
-external_perimeter_extrusion_width = 0.4
 external_perimeter_speed = 40
-extrusion_width = 0.4
 fill_pattern = cubic
-first_layer_extrusion_width = 0.4
-first_layer_height = 0.2
+first_layer_extrusion_width = 0
 first_layer_speed = 25
 gap_fill_speed = 40
-infill_extrusion_width = 0.4
 inherits = 
 ironing_speed = 30
-layer_height = 0.2
 max_print_speed = 300
 max_volumetric_speed = 10
-perimeter_extrusion_width = 0.4
 perimeter_speed = 80
 perimeters = 2
 print_settings_id = 
 skirts = 2
 small_perimeter_speed = 40
-solid_infill_extrusion_width = 0.4
 solid_infill_speed = 80
-support_material_extrusion_width = 0.35
 support_material_speed = 80
-top_infill_extrusion_width = 0.4
 top_solid_infill_speed = 40
 travel_speed = 300
 travel_speed_z = 50
 
+[print:0.1mm]
+inherits = *switchwire-common*
+first_layer_height = 0.2
+layer_height = 0.1
+bottom_solid_layers = 5
+top_solid_layers = 5
+
+[print:0.15mm]
+inherits = *switchwire-common*
+first_layer_height = 0.2
+layer_height = 0.15
+bottom_solid_layers = 4
+top_solid_layers = 4
+
 [print:0.2mm]
 inherits = *switchwire-common*
+first_layer_height = 0.2
+layer_height = 0.2
 
 [print:0.2mm Voron]
-inherits = *switchwire-common*
+inherits = 0.2mm
+compatible_printers = "Switchwire (0.4mm nozzle, red)"
+first_layer_extrusion_width = 0.4
+extrusion_width = 0.4
 fill_density = 40%
 bottom_solid_layers = 5
 perimeters = 4
 top_solid_layers = 5
 
 [print:0.2mm Rocket]
-inherits = *switchwire-common*
+inherits = 0.2mm
 bottom_solid_layers = 2
 top_solid_layers = 2
+
+[print:0.3mm]
+inherits = *switchwire-common*
+first_layer_height = 0.2
+layer_height = 0.3
+
+[print:0.4mm]
+inherits = *switchwire-common*
+first_layer_height = 0.2
+layer_height = 0.4
+
+[print:0.6mm]
+inherits = *switchwire-common*
+first_layer_height = 0.2
+layer_height = 0.6
 
 [filament:*switchwire-common*]
 bed_temperature = 60
