pass at pla settings

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -72,16 +72,12 @@ first_layer_height = 0.2
 layer_height = 0.6
 
 [filament:*switchwire-common*]
-bed_temperature = 60
 compatible_printers =
 compatible_printers_condition = printer_model=~/Switchwire/
 compatible_prints =
 compatible_prints_condition =
 fan_always_on = 1
-filament_colour = #A750B2
-filament_density = 1.23
 filament_vendor = (Unknown)
-first_layer_bed_temperature = 60
 inherits = 
 min_fan_speed = 50
 filament_deretract_speed = nil
@@ -154,6 +150,12 @@ temperature = 230
 
 [filament:PLA]
 inherits = *switchwire-common*
+temperature = 210
+first_layer_temperature = 210
+bed_temperature = 60
+first_layer_bed_temperature = 60
+filament_colour = #A750B2
+filament_density = 1.23
 
 [printer:*switchwire-common*]
 bed_custom_model = 
