overture hs-tpu 95a

--- a/switchwire.ini
+++ b/switchwire.ini
@@ -157,6 +157,23 @@ first_layer_bed_temperature = 60
 filament_colour = #A750B2
 filament_density = 1.23
 
+# calibrated for Overture HS-TPU 95A
+[filament:HS-TPU 95A]
+inherits = *switchwire-common*
+temperature = 230
+first_layer_temperature = 230
+bed_temperature = 60
+first_layer_bed_temperature = 60
+filament_colour = #8C9FFF
+filament_density = 1.38
+cooling = 0
+max_fan_speed = 30
+min_fan_speed = 30
+bridge_fan_speed = 30
+slowdown_below_layer_time = 15
+start_filament_gcode = "; Filament gcode\nSET_PRESSURE_ADVANCE ADVANCE=0.205\n"
+extrusion_multiplier = 0.94
+
 [printer:*switchwire-common*]
 bed_custom_model = 
 bed_custom_texture = 
